Fix dark mode  theme

--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,6 @@
 html {
   scroll-behavior: smooth;
 }
+.display-non {
+  @apply hidden;
+}
